# zeno-server-v1

./: implementation.md  main.py  pyproject.toml  run.py
app/: main.py
app/api/: __init__.py  auth.py  chat.py  deps.py
app/api/integrations/: __init__.py  calendar.py  core.py  google_calendar.py
app/core/: config.py  prompts.py  security.py
app/db/: supabase_client.py
app/models/: auth.py  calendar.py
app/schemas/: calendar.py  chat.py  integrations.py
app/services/: chat.py
app/services/integrations/: core.py  google_calendar.py
deploy/: build.sh  start.sh
