[project]
name = "zeno-server-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.3",
    "uvicorn>=0.34.3",
]
